# Qympy

./: .gitignore  LICENSE  README.md  SIM_HEP.ipynb  _test_KL.ipynb  circuit.py  example.ipynb  functions.py  gate.py  main.ipynb  mix_model.ipynb  pyproject.toml  setup.py  test.py  test_circuit.ipynb
Logo/: Qympy_Logo.pptx
circuit/: ansatz.py  circuit.py
example/: example.ipynb
foundation/: functions.py  gate.py
machinelearning/: __init__.py  quantum.py
src/circuit/: sp_gate.py
src/machinelearning/: classical.py  quantum.py
src/qympy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/qympy/example/: example.ipynb  example_circuit.ipynb  example_circuit.txt  example_ml.ipynb  example_ml.txt
src/qympy/machine_learning/: classical.py  quantum.py
src/qympy/quantum_circuit/: sp_circuit.py  sp_gate.py
src/qympy/test/: KL_divergence.ipynb  mix_model.ipynb
src/qympy/tests/: test_kl_div.ipynb  test_ml_model.ipynb
test/: KL_divergence.ipynb  mix_model.ipynb
